feat: added proper graceful shutdown, solved <defunct> process state, added GetScript() http method
todo:
*) todos
2) implement service and handler layer
3) add auth?
4) tests (integration and unit)
5) docker
